# flappy-bird-ai

./: README.md  constants.py  flappy_game.py  neat_runner.py  pipe.py  pyproject.toml  visualize.py
flappybird/: base.py  bird.py  constants.py  draw_win.py  flappy_game.py
